added jwt properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=finPlanner
+
+# Security - JWT setup
+app.jwt.accessTokenExpirationMs=900000
+app.jwt.refreshTokenExpirationMs=1209600000
+app.jwt.accessTokenCookieName=access_token
+app.jwt.refreshTokenCookieName=refresh_token
